--- a/db/my.cnf
+++ b/db/my.cnf
@@ -1,10 +1,14 @@
 #bind-address = 0.0.0.0
 
 [mysqld]
-character_set_server=utf8
-character_set_filesystem=utf8
-collation-server=utf8_general_ci
-init-connect='SET NAMES utf8'
-init_connect='SET collation_connection = utf8_general_ci'
-init_connect = "grant ALL PRIVILEGES ON *.* To 'hackU'@'%";
+character-set-server=utf8mb4
+collation-server=utf8mb4_unicode_ci
 skip-character-set-client-handshake
+max_allowed_packet=100M
+
+[mysqldump]
+default-character-set=utf8mb4
+
+[client]
+default-character-set=utf8mb4
+
