--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,12 @@ services:
     platform: linux/x86_64 # M1チップ対応のため追記
     image: mysql:5.7
     container_name: db
-    environment:
-      MYSQL_ROOT_PASSWORD: hackU
-      MYSQL_USER: hackU 
-      MYSQL_PASSWORD: hackU
+    env_file:
+      - ./db/.env
     volumes:
       - ./db/data:/var/lib/mysql
       - ./db/my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./db/grant.sql:/docker-entrypoint-initdb.d/grant.sql
     ports:
       - 3306:3306
     command: --port 3306
