--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   db:
-    platform: linux/x86_64 # M1チップ対応のため追記
+    #platform: linux/x86_64 # M1チップ対応のため追記
     image: mysql:5.7
     container_name: db
     env_file:
