--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,25 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@react-sigma/core": "^2.0.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios-hooks": "^3.1.1",
+    "graphology": "^0.24.1",
+    "graphology-types": "^0.24.4",
+    "leader-line": "^1.0.7",
+    "leader-line-new": "^1.1.9",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-hook-form": "^7.32.1",
+    "react-leader-line": "^1.0.5",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-xarrows": "^2.0.2",
+    "sigma": "^2.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
