--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-draggable": "^4.4.5",
     "react-hook-form": "^7.32.1",
     "react-leader-line": "^1.0.5",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-xarrows": "^2.0.2",
