--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
     "axios-hooks": "^3.1.1",
     "graphology": "^0.24.1",
     "graphology-types": "^0.24.4",
+    "@date-io/date-fns": "^2.14.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.7",
+    "date-fns": "^2.28.0",
     "leader-line": "^1.0.7",
     "leader-line-new": "^1.1.9",
     "lodash": "^4.17.21",
