--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,20 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "@react-sigma/core": "^2.0.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "axios-hooks": "^3.1.1",
+    "date-fns": "^2.28.0",
     "graphology": "^0.24.1",
     "graphology-types": "^0.24.4",
-    "@date-io/date-fns": "^2.14.0",
-    "@mui/x-date-pickers": "^5.0.0-alpha.7",
-    "date-fns": "^2.28.0",
     "leader-line": "^1.0.7",
     "leader-line-new": "^1.1.9",
     "lodash": "^4.17.21",
