--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,7 @@
     "eject": "react-scripts eject",
     "rm": "rm -rf docs",
     "mv": "mv build docs",
-    "git": "git add . && git commit && git push origin master",
+    "git": "git add . && git commit && git push",
     "deploy": "npm run rm && npm run build && npm run mv && npm run git"
   },
   "eslintConfig": {
